# ParticleEngine

./: .gitignore  CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.h  GravitySystem.cpp  GravitySystem.h  README.txt  main.cpp
include/SFML/Graphics/: CircleShape.hpp  RenderWindow.hpp  Shape.hpp  StencilMode.hpp
physical_entities/: Circle.cpp  Circle.h  PhysicalEntity.cpp  PhysicalEntity.h  Rectangle.cpp  Rectangle.h
